chore: fix page responsiveness on tablet and mobile

--- a/web/src/components/email-subscribe-block/subscribe.css
+++ b/web/src/components/email-subscribe-block/subscribe.css
@@ -54,7 +54,7 @@
         }
     }
 
-    &.partnerships {
+    &.light.partnerships {
         background-image: url('images/email-bg-partnerships.png');
     }
 
@@ -63,6 +63,10 @@
         flex-direction: column;
         background: url('images/email-bg-md.svg');
         background-size: cover;
+
+        &.light.partnerships {
+            background-image: url('images/email-bg-partnerships-small.png');
+        }
 
         &.light {
             background-image: url('images/email-bg-md-light.svg');
